# database_slm_postgres

./: .gitignore  README.md  docker-compose.yml  foo.py  main.py  pyproject.toml  requirements.txt
src/: api.py  config.py  pipeline.py  rag.py
src/database/: models.py
src/embedding/: generator.py  vector_store.py
src/ingest/: ingest_minio.py
src/processing/: chunker.py  text_extractor.py
test/: conftest.py  test_src.chuker.py  test_src_models.py  test_src_text_extractor.py  test_src_vector_store.py
