[project]
name = "database-slm-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "ruff>=0.15.18",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
]
